--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Viga&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+  @apply text-3xl;
+}
+
+body {
+  background-image: linear-gradient(141deg, #3a6464 0%, #172a2a 85%);
+}
