--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,10 @@ h1 {
   @apply text-3xl;
 }
 
+h2 {
+  @apply text-xl;
+}
+
 body {
   background-image: linear-gradient(141deg, #3a6464 0%, #172a2a 85%);
 }
