--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,10 @@ body {
   background-image: linear-gradient(141deg, #3a6464 0%, #172a2a 85%);
 }
 
-a {
-  @apply underline;
+nav {
+  @apply flex items-center justify-between flex-wrap px-5 py-3 bg-gradient-to-b from-teal-700 to-teal-900;
+}
+
+main {
+  @apply text-gray-200 flex-1 w-full max-w-4xl p-4 mx-auto min-h-full;
 }
